--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Antools</title>
+    <meta src="./img/logo.svg" class="footer-logo-img"></meta>
   </head>
   <body>
       <header class="header">
@@ -503,5 +504,43 @@
           </div>
         </section>
       </main>
+      <hr class="line">
+      <footer class="footer">
+        <div class="footer container">
+          <div class="footer-collumn-logo">
+             <div class="logo-footer">
+          <div class="logo-background">
+            <img src="./img/logo.svg" class="footer-logo-img"></img> 
+          </div>
+          <a class="footer-title-logo" href="#">antools.</a>
+          </div>
+          <h2 class="galery-title-h2-footer">Copyright 2021. Antools</h2>
+          <h3 class="galery-title-h3-footer">Antool is a web collection of<br>information on paid or free Design<br>and Development tools</h3>
+          </div>
+          <div class="footer-collumn-contact">
+            <h4 class="galery-title-h4-footer">Contact Us</h4>
+            <div class="footer-links-contact">
+              <a class="footer-link" href="+621987463">+621987463</a>
+              <a class="footer-link" href="M Building, No.10 A">M Building, No.10 A</a>
+              <a class="footer-link"  href="antools@awesome.com">antools@awesome.com</a>
+            </div>
+          </div>
+          <div class="footer-collumn-сategories">
+            <h4 class="galery-title-h4-footer">Categories</h4>
+            <div class="footer-links-сategories">
+              <a class="footer-link" href="/">Design</a>
+              <a class="footer-link" href="/">Development</a>
+            </div>
+          </div>
+          <div class="footer-collumn-info">
+            <h4 class="galery-title-h4-footer">Company Info</h4>
+            <div class="footer-links-info">
+              <a class="footer-link" href="/">About Us</a>
+              <a class="footer-link" href="/">Our Partners</a>
+              <a class="footer-link" href="/">Blog</a>
+            </div>
+          </div>
+        </div>
+      </footer>
   </body>
 </html>
