--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Antools</title>
-    <meta src="./img/logo.svg" class="footer-logo-img"></meta>
   </head>
   <body>
       <header class="header">
         <div class="header-container container">
            <div class="header-links"> 
-          <ul class="header-list-logo header-list">
+          <ul class="header-list-logo">
             <li class="header-item-logo">
                <img src="./img/logo.svg" class="header-logo-img"></img>
             </li>
@@ -31,7 +30,7 @@
             </li>      
           </ul>
           <div class="header-links-buttons ">
-            <ul class="header-list-buttons header-list">
+            <ul class="header-list-buttons">
               <li class="header-item home">
                 <a class="header-link home" href="#">Home</a>
               </li>
@@ -48,10 +47,10 @@
           </div>
           <div class="header-links-account">
             <ul class="header-list-account header-list">
-              <li>
+              <li class="header-item">
                    <a class="header-link login" href="#">Login</a>
               </li>
-              <li>
+              <li class="header-item ">
                    <a class="header-link sign-up " href="#">Sign up</a>
               </li>
             </ul>
@@ -291,11 +290,11 @@
                   
                 </ul>
           </div>
-          <button class="galery-button-tools">Load more</button>
-          </div>  
+          </div>    
+           <button class="galery-button-tools">Load more</button>
         </section>
         <section class="galery-section-brand brand">
-          <div class="galery-brand ontainer">
+          <div class="galery-brand container">
           <h3 class="galery-title-h3-brand">Trusted more than 150+ brand</h3>
           <ul class="galery-list-barands">
             <li class="galery-item-brand mincrosoft">
@@ -368,7 +367,7 @@
               <div class="galery-div-newtools phpstorm">
             <ul class="galery-list-name-img">
               <li class="list-tools-item">
-                <img class="galery-image-tools"src="../img/PHPStorm.svg" alt="figma">
+                <img class="galery-image-tools"src="./img/PHPStorm.svg" alt="figma">
               </li>
               <li class="list-tools-item">
                <ul class="galery-list-name">
@@ -404,7 +403,7 @@
               <div class="galery-div-newtools toolbox">
             <ul class="galery-list-name-img">
               <li class="list-tools-item">
-                <img class="galery-image-tools"src="../img/Toolbox.svg" alt="figma">
+                <img class="galery-image-tools"src="./img/Toolbox.svg" alt="figma">
               </li>
               <li class="list-tools-item">
                <ul class="galery-list-name">
@@ -440,7 +439,7 @@
               <div class="galery-div-newtools procreate">
             <ul class="galery-list-name-img">
               <li class="list-tools-item">
-                <img class="galery-image-tools"src="../img/Procreate.svg" alt="figma">
+                <img class="galery-image-tools"src="./img/Procreate.svg" alt="figma">
               </li>
               <li class="list-tools-item">
                <ul class="galery-list-name">
@@ -510,7 +509,7 @@
           <div class="footer-collumn-logo">
              <div class="logo-footer">
           <div class="logo-background">
-            <img src="./img/logo.svg" class="footer-logo-img"></img> 
+            <img src="./img/logo.svg" class="footer-logo-img"> 
           </div>
           <a class="footer-title-logo" href="#">antools.</a>
           </div>
@@ -522,7 +521,7 @@
             <div class="footer-links-contact">
               <a class="footer-link" href="+621987463">+621987463</a>
               <a class="footer-link" href="M Building, No.10 A">M Building, No.10 A</a>
-              <a class="footer-link"  href="antools@awesome.com">antools@awesome.com</a>
+              <a class="footer-link" href="antools@awesome.com">antools@awesome.com</a>
             </div>
           </div>
           <div class="footer-collumn-сategories">
