--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
               <div class="galery-div-newtools phpstorm">
             <ul class="galery-list-name-img">
               <li class="list-tools-item">
-                <img class="galery-image-tools"src="./img/PHPStorm.svg" alt="figma">
+                <img class="galery-image-tools"src="./img/phpstorm.svg" alt="figma">
               </li>
               <li class="list-tools-item">
                <ul class="galery-list-name">
@@ -403,7 +403,7 @@
               <div class="galery-div-newtools toolbox">
             <ul class="galery-list-name-img">
               <li class="list-tools-item">
-                <img class="galery-image-tools"src="./img/Toolbox.svg" alt="figma">
+                <img class="galery-image-tools"src="./img/toolbox.svg" alt="figma">
               </li>
               <li class="list-tools-item">
                <ul class="galery-list-name">
@@ -439,7 +439,7 @@
               <div class="galery-div-newtools procreate">
             <ul class="galery-list-name-img">
               <li class="list-tools-item">
-                <img class="galery-image-tools"src="./img/Procreate.svg" alt="figma">
+                <img class="galery-image-tools"src="./img/procreate.svg" alt="figma">
               </li>
               <li class="list-tools-item">
                <ul class="galery-list-name">
